--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "apikey": "",
+    "apikey": "49bf6fa84c7b974a1db47719",
     "prefix": "/",
-    "owner": "62895418200111"
+    "owner": "722088726"
 }
